# urbanophile.github.io

./: .gitignore  .gitmodules  CLAUDE.md  CNAME  README.md  archives.html  authors.html  categories.html  exploring-the-cpython-interpreter.html  index.html  package-lock.json  package.json  pelicanconf.py  publishconf.py  pyproject.toml  requirements.txt  tags.html
.github/workflows/: pelican.yml
apps-script/: Code.js  README.md
author/: matt-gibson.html
cache/: ArticlesGenerator-Readers  PagesGenerator-Readers
category/: python.html
content/Blog/: awesome_sat_solvers.md  demystifying_battery_technology.md  dwitter_simple.rst  energetic_exposition_of_markets.md  energetic_exposition_of_markets_2.md  energetic_exposition_of_markets_3.md  js_in_pelican.rst  jupyter_ecosystem.rst  or_modelling_resources.md  python_interpreter.rst  (+7 more)
deprecated/: .gitmodules
draft_posts/: python_interpreter2.rst  web2py_quickstart.rst
feeds/: all.atom.xml
pages/: about-me.html  cv.html  matthew-gibson.html  my-cv.html
stub_posts/: 4plot.rst  about-site.rst  analyse-regret.rst  anova.rst  bootstrap-and-problems.rst  brown-clustering.rst  databases_pendant.rst  first-django-app.rst  good-turing-frequency.rst  hauckdonner_phenom.rst  hiearchical_clustering.rst  howto-personal-gateway.rst  income_distribution.rst  inference_with_tar.rst  lottery.rst  permutation_test.R  publishconf.py  ray_tracing.rst  running_median.rst  sniffer_tmux.rst  static-hosting-sites-with-s3.rst  streaming-from-pi.rst  vagrant_dev_env.rst  viz_app.rst
tag/: links.html  programming.html  python.html
(+28 files in other folders)
